<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3c6f20"

    tools:context="com.example.android.scoregaa.MainActivity">

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="16dp"
                    android:onClick="reset"
                    android:text="Reset" />

            </LinearLayout>

            <ImageView

                android:layout_width="1dp"
...
